Transition to API10.